--- a/package.json
+++ b/package.json
@@ -9,25 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.1.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "mysql2": "^3.6.5",
+    "@tailwindcss/postcss": "^4.1.12",
+    "autoprefixer": "^10.4.21",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.263.1",
+    "lucide-react": "^0.540.0",
+    "mysql2": "^3.6.5",
+    "next": "^15.4.7",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
     "eslint": "^8",
     "eslint-config-next": "15.1.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
