Le formulaire de contact est dorénavant pleinement fonctionnel

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@tailwindcss/postcss": "^4.1.12",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^17.2.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.540.0",
     "mysql2": "^3.6.5",
     "next": "^15.4.7",
+    "nodemailer": "^7.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^4.12.0"
